--- a/personal site/templates/work.html
+++ b/personal site/templates/work.html
@@ -1,12 +1,12 @@
 {% extends "layout.html" %}
 {% block contents%}
 	<div class="contents">
-		<div class='work'>test</div>
-		<div class='work'>test</div>
-		<div class='work'>test</div>
-		<div class='work'>test</div>
-		<div class='work'>test</div>
-		<div class='work'>test</div>
+		<a href="/whatido/work1"><div class='work'>test</div></a>
+		<a href="/whatido/work2"><div class='work'>test</div></a>
+		<a href="/whatido/work3"><div class='work'>test</div></a>
+		<a href="/whatido/work4"><div class='work'>test</div></a>
+		<a href="/whatido/work5"><div class='work'>test</div></a>
+		<a href="/whatido/work6"><div class='work'>test</div></a>
 	</div>
 
 {% endblock%}
